- Monsters can jump. This essentially allows them to do a short range teleport
  to the player if there is an available jumping path.
- All monsters can now gain displacement, water walking, and jumping from
  appropriate items.

Role and Race Changes
- Improved Cartomancer energy levels, which were very low due to a missing case
  in a switch statement.
- Cartomancer basement is now a mines level.
- Easter egg for Cartomancers that read credit cards.
- Chromatic dragons are treated as domestic for Dragonmasters, meaning (among
  other things) that they can be tamed.
- Dragonmasters slowly regenerate energy when standing next to pet dragons.
  Additionally, pet dragons will attempt to help a dragonmaster who is slimed,
  asleep, or stuck.
- As noted above, the pirate role is now available.

Miscelaneous Changes and Bug Fixes
- Fixed the alignment of monsters being compared incorrectly when seeing whether
  they would sacrifice something on an altar.
- Fixed a segfault relating to monsters being gifted a nonexistent item from an
  altar.
- Fixed monsters not picking up corpses to sacrifice. All of these fixes make
  monster sacrifice on altars much more likely to occur, especially in minetown.
- Landsharks are no longer slithy.
- Martial artists and martial masters use monk hit messages.
- Landsharks and Jumping Spiders are capable of jumping. Polymorphing into
  either of these monsters will grant the ability to jump.
- Completely reworked Mephisto's lair.
- The Grim Reaper is now drain resistant.
- Earmuffs are now referred to as "a pair of earmuffs" instead of "earmuff,"
  fixing one of the longest running bugs in SpliceHack.
- Game pluralizes "worm that walks" as "worms that walk," as opposed to the
  Gollum-esque "worms that walkses."
- Psychic and sonic resistance now appear in the enlightenment menu.
- Permanent versus temporary hallucination is now displayed correctly based on
  roleplay options.
- Added a few random god names.