@@ -110,7 +110,7 @@ NEARDATA struct permonst mons[] = {
     MON("giant fly", S_ANT, LVL(1, 12, 3, 0, 0), (G_GENO | G_SGROUP | 3),
         A(ATTK(AT_BITE, AD_PHYS, 1, 3), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
           NO_ATTK),
-        SIZ(10, 10, MS_SILENT, MZ_TINY), 0, 0,
+        SIZ(10, 10, MS_BUZZ, MZ_TINY), 0, 0,
         M1_ANIMAL | M1_NOHANDS | M1_OVIPAROUS | M1_CARNIVORE | M1_FLY,
         M2_HOSTILE, 0, CLR_ORANGE),
     MON("giant ant", S_ANT, LVL(2, 18, 3, 0, 0), (G_GENO | G_SGROUP | 3),
@@ -792,7 +792,7 @@ NEARDATA struct permonst mons[] = {
     MON("cow", S_QUADRUPED, LVL(1, 6, 8, 0, 0), (G_GENO | G_SGROUP | 1),
         A(ATTK(AT_BUTT, AD_PHYS, 1, 12), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
           NO_ATTK),
-        SIZ(400, 800, MS_SILENT, MZ_LARGE), 0, 0,
+        SIZ(400, 800, MS_MOO, MZ_LARGE), 0, 0,
         M1_ANIMAL | M1_NOHANDS | M1_HERBIVORE, M2_PEACEFUL, M3_INFRAVISIBLE,
         HI_DOMESTIC),
     MON("rothe", S_QUADRUPED, LVL(2, 9, 7, 0, 0), (G_GENO | G_SGROUP | 4),
@@ -816,7 +816,7 @@ NEARDATA struct permonst mons[] = {
     MON("earthshark", S_QUADRUPED, LVL(7, 12, 2, 0, 0), (G_GENO | 2),
         A(ATTK(AT_BITE, AD_PHYS, 5, 6), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
           NO_ATTK),
-        SIZ(500, 350, MS_SILENT, MZ_LARGE), 0, 0,
+        SIZ(500, 350, MS_ROAR, MZ_LARGE), 0, 0,
         M1_WALLWALK | M1_ANIMAL | M1_NOHANDS
             | M1_CARNIVORE | M1_OVIPAROUS | M1_THICK_HIDE | M1_NOTAKE,
         M2_HOSTILE | M2_STRONG, 0, CLR_GRAY),
@@ -2425,13 +2425,13 @@ struct permonst _mons2[] = {
     MON("kobold zombie", S_ZOMBIE, LVL(0, 6, 10, 0, -2),
         (G_GENO | G_NOCORPSE | 1), A(ATTK(AT_CLAW, AD_PHYS, 1, 4), NO_ATTK,
                                      NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
-        SIZ(400, 50, MS_SILENT, MZ_SMALL), MR_COLD | MR_SLEEP | MR_POISON, 0,
+        SIZ(400, 50, MS_GROAN, MZ_SMALL), MR_COLD | MR_SLEEP | MR_POISON, 0,
         M1_BREATHLESS | M1_MINDLESS | M1_HUMANOID | M1_POIS,
         M2_UNDEAD | M2_STALK | M2_HOSTILE, M3_INFRAVISION, CLR_BROWN),
     MON("gnome zombie", S_ZOMBIE, LVL(1, 6, 10, 0, -2),
         (G_GENO | G_NOCORPSE | 1), A(ATTK(AT_CLAW, AD_PHYS, 1, 5), NO_ATTK,
                                      NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
-        SIZ(650, 50, MS_SILENT, MZ_SMALL), MR_COLD | MR_SLEEP | MR_POISON, 0,
+        SIZ(650, 50, MS_GROAN, MZ_SMALL), MR_COLD | MR_SLEEP | MR_POISON, 0,
         M1_BREATHLESS | M1_MINDLESS | M1_HUMANOID | M1_POIS,
         M2_UNDEAD | M2_STALK | M2_HOSTILE | M2_GNOME, M3_INFRAVISION,
         CLR_BROWN),
@@ -2439,14 +2439,14 @@ struct permonst _mons2[] = {
         (G_GENO | G_SGROUP | G_NOCORPSE | 1),
         A(ATTK(AT_CLAW, AD_PHYS, 1, 6), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
           NO_ATTK),
-        SIZ(850, 75, MS_SILENT, MZ_HUMAN), MR_COLD | MR_SLEEP | MR_POISON, 0,
+        SIZ(850, 75, MS_GROAN, MZ_HUMAN), MR_COLD | MR_SLEEP | MR_POISON, 0,
         M1_BREATHLESS | M1_MINDLESS | M1_HUMANOID | M1_POIS,
         M2_UNDEAD | M2_STALK | M2_HOSTILE | M2_ORC, M3_INFRAVISION, CLR_GRAY),
     MON("dwarf zombie", S_ZOMBIE, LVL(2, 6, 9, 0, -3),
         (G_GENO | G_SGROUP | G_NOCORPSE | 1),
         A(ATTK(AT_CLAW, AD_PHYS, 1, 6), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
           NO_ATTK),
-        SIZ(900, 150, MS_SILENT, MZ_HUMAN), MR_COLD | MR_SLEEP | MR_POISON, 0,
+        SIZ(900, 150, MS_GROAN, MZ_HUMAN), MR_COLD | MR_SLEEP | MR_POISON, 0,
         M1_BREATHLESS | M1_MINDLESS | M1_HUMANOID | M1_POIS,
         M2_UNDEAD | M2_STALK | M2_HOSTILE | M2_DWARF, M3_INFRAVISION,
         CLR_RED),
@@ -2454,7 +2454,7 @@ struct permonst _mons2[] = {
         (G_GENO | G_SGROUP | G_NOCORPSE | 1),
         A(ATTK(AT_CLAW, AD_PHYS, 1, 7), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
           NO_ATTK),
-        SIZ(WT_ELF, 175, MS_SILENT, MZ_HUMAN), MR_COLD | MR_SLEEP | MR_POISON,
+        SIZ(WT_ELF, 175, MS_GROAN, MZ_HUMAN), MR_COLD | MR_SLEEP | MR_POISON,
         0, M1_BREATHLESS | M1_MINDLESS | M1_HUMANOID,
         M2_UNDEAD | M2_STALK | M2_HOSTILE | M2_ELF, M3_INFRAVISION,
         CLR_GREEN),
@@ -2462,7 +2462,7 @@ struct permonst _mons2[] = {
         (G_GENO | G_SGROUP | G_NOCORPSE | 1),
         A(ATTK(AT_CLAW, AD_PHYS, 1, 8), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
           NO_ATTK),
-        SIZ(WT_HUMAN, 200, MS_SILENT, MZ_HUMAN),
+        SIZ(WT_HUMAN, 200, MS_GROAN, MZ_HUMAN),
         MR_COLD | MR_SLEEP | MR_POISON, 0,
         M1_BREATHLESS | M1_MINDLESS | M1_HUMANOID,
         M2_UNDEAD | M2_STALK | M2_HOSTILE, M3_INFRAVISION, HI_DOMESTIC),
@@ -2478,7 +2478,7 @@ struct permonst _mons2[] = {
         (G_GENO | G_NOCORPSE | 1),
         A(ATTK(AT_CLAW, AD_PHYS, 1, 10), ATTK(AT_CLAW, AD_PHYS, 1, 10),
           NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
-        SIZ(1700, 250, MS_SILENT, MZ_HUGE), MR_COLD | MR_SLEEP | MR_POISON, 0,
+        SIZ(1700, 250, MS_GROAN, MZ_HUGE), MR_COLD | MR_SLEEP | MR_POISON, 0,
         M1_BREATHLESS | M1_MINDLESS | M1_HUMANOID,
         M2_UNDEAD | M2_STALK | M2_HOSTILE | M2_STRONG, M3_INFRAVISION,
         CLR_BLUE),
@@ -2491,7 +2491,7 @@ struct permonst _mons2[] = {
     MON("skeletal pirate", S_ZOMBIE, LVL(5, 8, 4, 0, 0),
         (G_SGROUP | G_NOCORPSE | G_NOGEN | 0),
      	  A(ATTK(AT_WEAP, AD_PHYS, 1, 6), NO_ATTK, NO_ATTK,
-        NO_ATTK, NO_ATTK, NO_ATTK), SIZ(300, 5, MS_BONES, MZ_HUMAN),
+        NO_ATTK, NO_ATTK, NO_ATTK), SIZ(300, 5, MS_PIRATE, MZ_HUMAN),
         MR_COLD | MR_SLEEP | MR_POISON | MR_STONE, 0,
         M1_BREATHLESS | M1_MINDLESS | M1_HUMANOID,
         M2_UNDEAD | M2_WANDER | M2_HOSTILE | M2_STRONG | M2_COLLECT | M2_NASTY,
@@ -2500,7 +2500,7 @@ struct permonst _mons2[] = {
         (G_GENO | G_NOCORPSE | 1),
         A(ATTK(AT_CLAW, AD_PHYS, 2, 8), ATTK(AT_CLAW, AD_PHYS, 2, 8), NO_ATTK,
           NO_ATTK, NO_ATTK, NO_ATTK),
-        SIZ(2050, 375, MS_SILENT, MZ_HUGE), MR_COLD | MR_SLEEP | MR_POISON, 0,
+        SIZ(2050, 375, MS_GROAN, MZ_HUGE), MR_COLD | MR_SLEEP | MR_POISON, 0,
         M1_BREATHLESS | M1_MINDLESS | M1_HUMANOID,
         M2_UNDEAD | M2_STALK | M2_HOSTILE | M2_GIANT | M2_STRONG,
         M3_INFRAVISION, CLR_CYAN),
@@ -2996,7 +2996,7 @@ struct permonst _mons2[] = {
      	  LVL(10, 12, -4, 0, 0), (G_NOCORPSE | G_SGROUP | G_NOGEN | 0),
      	  A(ATTK(AT_WEAP, AD_PHYS, 2, 6), NO_ATTK,
      	    NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
-   	    SIZ(300, 5, MS_BONES, MZ_HUMAN),
+   	    SIZ(300, 5, MS_PIRATE, MZ_HUMAN),
    	    MR_FIRE| MR_SLEEP | MR_POISON | MR_STONE, 0,
    	    M1_BREATHLESS | M1_MINDLESS | M1_HUMANOID,
    	    M2_DEMON | M2_WANDER | M2_HOSTILE | M2_STRONG | M2_COLLECT | M2_NASTY,
@@ -3479,7 +3479,7 @@ struct permonst _mons2[] = {
     MON("pirate", S_HUMAN, LVL(10, 12, 10, 1, -3), G_NOGEN,
        	A(ATTK(AT_WEAP, AD_PHYS, 1, 6), ATTK(AT_WEAP, AD_PHYS, 1, 6),
        	  NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
-       	SIZ(WT_HUMAN, 400, MS_HUMANOID, MZ_HUMAN), 0, 0,
+       	SIZ(WT_HUMAN, 400, MS_PIRATE, MZ_HUMAN), 0, 0,
        	M1_HUMANOID | M1_OMNIVORE,
        	M2_NOPOLY | M2_HUMAN | M2_STRONG | M2_COLLECT, M3_INFRAVISIBLE,
        	HI_DOMESTIC),
