@@ -357,6 +357,12 @@ register struct monst *mtmp;
     const char *ret;
 
     switch (mtmp->data->msound) {
+    case MS_GROAN:
+        ret = "moan";
+        break;
+    case MS_MOO:
+        ret = "moo";
+        break;
     case MS_MEW:
     case MS_HISS:
         ret = "hiss";
@@ -389,6 +395,10 @@ register struct monst *mtmp;
         break;
     case MS_CHIMERA:
         ret = "hisses, roars, and screech";
+        break;
+    case MS_PIRATE:
+        ret = "curse";
+        break;
     default:
         ret = "scream";
     }
@@ -736,6 +746,22 @@ register struct monst *mtmp;
         break;
     case MS_BUZZ:
         pline_msg = mtmp->mpeaceful ? "drones." : "buzzes angrily.";
+        break;
+    case MS_MOO:
+        pline_msg = "moos.";
+        break;
+    case MS_GROAN:
+        pline_msg = mtmp->mpeaceful ? "mutters \"brains!\"." : "groans.";
+        break;
+    case MS_PIRATE:
+        if (!mtmp->mpeaceful) {
+              pline("says, \"Ye be off the edge of the map, matey.\"");
+              break;
+        } else if (is_undead(mtmp->data)) {
+            pline_msg = "tells you to be careful of cursed gold.";
+        } else {
+            pline_msg = "talks to you about the pirate code.";
+        }
         break;
     case MS_GRUNT:
         pline_msg = "grunts.";
