@@ -109,3 +109,4 @@ Miscelaneous Changes and Bug Fixes
 - Permanent versus temporary hallucination is now displayed correctly based on
   roleplay options.
 - Added a few random god names.
+- Added new sounds for pirates, zombies, cows, and giant flies.
